# aoc

./: .gitignore
2021/Day 01/problem01/: Cargo.toml  main  main.rs
2021/Day 01/problem02/: Cargo.toml
2021/Day 02/problem01/: Cargo.toml
2021/Day 02/problem02/: Cargo.toml
2021/Day 03/problem01/: Cargo.toml
2021/Day 03/problem01/src/: main.rs
2021/Day 04/problem01/src/: main.rs
2021/Day 04/problem01/src/lib/: mod.rs
2021/Day 04/problem01/src/lib/batch_file/: mod.rs  policy.rs
2022/rust/Day 01/problem01/: Cargo.toml  run.sh  setting.md
2022/rust/Day 01/problem01/src/: main.rs
2022/rust/Day 01/problem02/: Cargo.toml  run_example.sh  setting.md
2022/rust/Day 01/problem02/src/: main.rs
Day 01/problem02/src/: main.rs
Day 02/problem01/: Cargo.toml
Day 02/problem01/src/: main.rs
Day 02/problem02/src/: main.rs
Day 03/problem01/: Cargo.toml
Day 03/problem01/src/: main.rs
Day 04/problem01/: Cargo.toml
Day 04/problem01/src/: main.rs
Day 04/problem01/src/lib/: mod.rs  scanner.rs
Day 04/problem01/src/lib/batch_file/: height.rs  mod.rs  policy.rs  rgb.rs
