[package]
name = "problem01"
version = "0.1.0"
authors = ["Ronald Brachetti <ron@clean-code-culture.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "1.0.0"
ndarray = "0.14.0"