[package]
name = "problem01"
version = "0.1.0"
authors = ["Ronald Brachetti <ron@clean-code-culture.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"
regex = "1.4.3"
recap = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
